[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.0.3",
    "flask-sqlalchemy>=3.1.1",
    "psycopg2-binary>=2.9.9",
    "viennarna>=2.7.0",
    "forgi>=2.2.3",
    "matplotlib>=3.9.2",
    "numpy<2",
    "networkx>=3.4.1",
    "requests>=2.32.3",
]
